Clear out a few more cases of `UnsupportedEncodingException`.